--- a/_includes/Love.html
+++ b/_includes/Love.html
@@ -2,15 +2,14 @@
         <title>Love</title>
         
         <link type="text/css" rel="stylesheet" href="./Love_files/default.css">
-        <script type="text/javascript" src="./Love_files/jquery.min.js"></script>
-        <script type="text/javascript" src="./Love_files/jscex.min.js"></script>
-        <script type="text/javascript" src="./Love_files/jscex-parser.js"></script>
-        <script type="text/javascript" src="./Love_files/jscex-jit.js"></script>
-        <script type="text/javascript" src="./Love_files/jscex-builderbase.min.js"></script>
-        <script type="text/javascript" src="./Love_files/jscex-async.min.js"></script>
-        <script type="text/javascript" src="./Love_files/jscex-async-powerpack.min.js"></script>
-        <script type="text/javascript" src="./Love_files/functions.js" charset="utf-8"></script>
-        <script type="text/javascript" src="/js/love.js" charset="utf-8"></script>
+        <script type="text/javascript" src="/js/Love_files/jscex.min.js"></script>
+        <script type="text/javascript" src="/js/Love_files/jscex-parser.js"></script>
+        <script type="text/javascript" src="/js/Love_files/jscex-jit.js"></script>
+        <script type="text/javascript" src="/js/Love_files/jscex-builderbase.min.js"></script>
+        <script type="text/javascript" src="/js/Love_files/jscex-async.min.js"></script>
+        <script type="text/javascript" src="/js/Love_files/jscex-async-powerpack.min.js"></script>
+        <script type="text/javascript" src="/js/Love_files/functions.js" charset="utf-8"></script>
+        <script type="text/javascript" src="/js/Love_files/love.js" charset="utf-8"></script>
 
     </head>
     <body>
