--- a/_includes/Love.html
+++ b/_includes/Love.html
@@ -1,7 +1,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Love</title>
         
-        <link type="text/css" rel="stylesheet" href="./Love_files/default.css">
+        <link type="text/css" rel="stylesheet" href="css/Love_files/default.css">
         <script type="text/javascript" src="/js/Love_files/jscex.min.js"></script>
         <script type="text/javascript" src="/js/Love_files/jscex-parser.js"></script>
         <script type="text/javascript" src="/js/Love_files/jscex-jit.js"></script>
