--- a/_includes/Love.html
+++ b/_includes/Love.html
@@ -2,6 +2,7 @@
         <title>Love</title>
         
         <link type="text/css" rel="stylesheet" href="/js/Love_files/default.css">
+        <script type="text/javascript" src="/js/Love_files/jquery.min.js"></script>
         <script type="text/javascript" src="/js/Love_files/jscex.min.js"></script>
         <script type="text/javascript" src="/js/Love_files/jscex-parser.js"></script>
         <script type="text/javascript" src="/js/Love_files/jscex-jit.js"></script>
